MM-13098 FIx for Minor scroll pop on firefox (#2087)

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -702,6 +702,9 @@
         position: relative;
         height: 40px;
         padding: 0px;
+        .loading__content {
+            height: 40px;
+        }
     }
 }
 
